Added favicon, changed some copyright to be more clear

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reki</title>
+  <meta name="description" content="Reki is data management for modern associations. Built for associations that work with data of all kinds. Contact us to learn how you can better manage your data!">
+  <link rel="shortcut icon" type="image/png" href="./images/rekiLogo.png">
+  <title>Reki - Data Management for Modern Associations</title>
 </head>
 <body>
   <div id="root"></div>
