--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QR2C0M34KY"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-QR2C0M34KY');
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Reki is data management for modern associations. Built for associations that work with data of all kinds. Contact us to learn how you can better manage your data!">
-  <link rel="shortcut icon" type="image/png" href="./images/rekiLogo.png">
   <title>Reki - Data Management for Modern Associations</title>
 </head>
 <body>
